--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.5.2"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -56,6 +57,7 @@ dependencies {
     implementation 'androidx.compose.material:material:1.2.1'
     implementation 'androidx.compose.material3:material3:1.0.0-alpha16'
     implementation "androidx.compose.material3:material3-window-size-class:1.0.0-alpha16"
+    implementation  "androidx.navigation:navigation-compose:$nav_version"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
